--- a/position-exercise.html
+++ b/position-exercise.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <nav>
+    <img src="" alt="cat logo"class="logo">
+    <a href="#">Home</a>
+    <a href="#">display</a>
+    <a href="#">float</a>
+  </nav>
   <title>CSS Layout Exercises | position property</title>
   <meta charset="utf-8" name="description" content="Layout exercise on `position` property for Thinkful's front end web development course">
 
